Mise en forme
CSS pour la version mobile de la page recette
Ajout d'une requete pour recup les recettes contenant un ingrédient
Ajout d'une sécurité pour empecher la suppression d'un ingrédient s'il est dans une recette
